<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_medium"
    app:cardCornerRadius="@dimen/card_corner_radius_large"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/card_elevation_medium"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_medium"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/icon_size_xlarge"
            android:layout_height="@dimen/icon_size_xlarge"
            android:src="@drawable/ic_shield"
            android:layout_marginEnd="@dimen/margin_large"
            app:tint="@color/black"
            android:contentDescription="@string/guardian_icon_desc" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guardian_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:text="@string/guardian_name_placeholder" />

            <TextView
                android:id="@+id/guardian_relation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_600"
                android:textSize="@dimen/text_size_small"
                android:text="@string/guardian_relation_placeholder" />

            <TextView
                android:id="@+id/guardian_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_600"
                android:textSize="@dimen/text_size_small"
                android:text="@string/guardian_phone_placeholder" />

        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:src="@drawable/ic_phone"
            app:tint="@color/gray_600"
            android:contentDescription="@string/phone_icon_desc" />

    </LinearLayout>

</androidx.cardview.widget.CardView>