<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_xsmall"
    android:layout_marginBottom="@dimen/margin_xsmall"
    android:background="@drawable/medicine_pending_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Medicine Icon -->
        <ImageView
            android:id="@+id/medicine_icon"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:layout_marginStart="@dimen/spacing_small"
            android:src="@drawable/ic_pill"
            app:tint="@color/icon_tint_primary"
            android:contentDescription="@string/medicine_icon_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Name + Time + Dosage + Food -->
        <LinearLayout
            android:id="@+id/info_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:baselineAligned="false"
            app:layout_constraintStart_toEndOf="@id/medicine_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/medicine_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine_name_placeholder"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end" />

            <!-- Time -->
            <TextView
                android:id="@+id/medicine_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_placeholder"
                android:textColor="@color/time_accent"
                android:textSize="@dimen/text_size_xsmall"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/medicine_dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dosage_placeholder"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_xsmall"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/medicine_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with_food"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_xsmall"
                android:maxLines="1"
                android:ellipsize="end" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.wear.widget.BoxInsetLayout>