<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/guardian_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:padding="@dimen/padding_small">

        <!-- Header -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/guardian_header_height"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:layout_marginBottom="@dimen/margin_medium"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardian_info"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <!-- Loading -->
        <ProgressBar
            android:id="@+id/progressGuardian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!-- Empty State -->
        <TextView
            android:id="@+id/tvEmptyState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardian_empty"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_small"
            android:gravity="center"
            android:visibility="gone"
            android:padding="@dimen/padding_small" />

        <!-- Error State -->
        <TextView
            android:id="@+id/tvErrorState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardian_error"
            android:textColor="@color/error_red"
            android:textSize="@dimen/text_size_small"
            android:gravity="center"
            android:visibility="gone"
            android:padding="@dimen/padding_small" />

        <!-- Guardian List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/guardianRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium" />

    </LinearLayout>
</layout>